# OpenTopo

./: .gitignore  README.md  logAG.txt  readme.txt
C94-M8P/: NoteAG.txt
C94-M8P/web µBlox/: Product resources u-blox.URL  Site search u-blox.URL
CordovaApp/: bower.json  config.xml  package.json
CordovaApp/nbproject/: build.xml  plugins.properties  project.properties  project.xml
CordovaApp/plugins/: android.json  fetch.json
CordovaApp/www/: index.html
Data/20170628/: 26_06_2017_11_00_08.json  26_06_2017_11_00_27.json  26_06_2017_11_01_11.json  26_06_2017_11_15_15.json  26_06_2017_11_18_59.json  26_06_2017_11_21_05.json  26_06_2017_11_25_11.json  26_06_2017_11_28_30.json  26_06_2017_11_36_10.json  26_06_2017_15_45_01.json  26_06_2017_15_56_49.json  26_06_2017_16_02_10.json  26_06_2017_16_44_28.json  26_06_2017_16_54_20.json  26_06_2017_16_55_37.json  26_06_2017_16_57_15.json  26_06_2017_16_58_32.json  26_06_2017_17_00_34.json  26_06_2017_17_01_19.json  26_06_2017_17_01_56.json  26_06_2017_17_02_48.json  26_06_2017_17_03_09.json  26_06_2017_17_27_30.json  26_06_2017_17_32_06.json  26_06_2017_17_36_28.json  28_06_2017_17_48_26.json  28_06_2017_17_50_18.json  28_06_2017_17_54_43.json  28_06_2017_17_55_08.json  28_06_2017_17_59_35.json  28_06_2017_18_00_23.json  28_06_2017_19_01_47.json  28_06_2017_20_25_22.json
Data/20170704/: 04_07_2017_17_23_47.json  04_07_2017_17_24_57.json  (+43 more)
OpenGNSS/: README.md
OpenSoft/: AUTHORS  CMakeLists.txt  Makefile  README.md  configure
OpenSoft/src/back-end/: CMakeLists.txt
PythonApp/: 04_07_2017_17_37_23.json  JSON2FILE.py
(+50 files in other folders)
